--- a/src/sundaes-on-demand/package.json
+++ b/src/sundaes-on-demand/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.11.3"
+    "@testing-library/dom": "^8.11.3",
+    "msw": "^0.39.2"
   }
 }
