--- a/src/sundaes-on-demand/package.json
+++ b/src/sundaes-on-demand/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^8.11.3",
+    "eslint-plugin-jest-dom": "^4.0.1",
+    "jest-dom": "^4.0.0",
     "msw": "^0.39.2"
   }
 }
